syntax = "proto3";

import public "response_code.proto";

package instruct;

enum InstructType {
  DEFAULT_TYPE = 0;
  SPECIAL_TYPE = 1;
}

service Instruct {
  rpc send_instruct (InstructReq) returns (InstructResp) {}
}

message InstructReq {
  InstructType instruct_type = 1;
  string instruct = 2;
}

message InstructResp {
  bool status = 1;
  response.RespCode resp_code = 2;
}